[gd_scene load_steps=2 format=3 uid="uid://basr5mxkjqjlv"]

[ext_resource type="Script" path="res://models/base/card.gd" id="1_euqif"]

[node name="Card" type="VBoxContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_right = -1440.0
offset_bottom = 270.0
grow_horizontal = 2
script = ExtResource("1_euqif")
title = "示例卡片"
description = "蕴含着美食力量的神秘卡片。"

[node name="GridContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="GridContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "选中"

[node name="IsSelectedCheckBox" type="CheckBox" parent="GridContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true

[node name="HBoxContainer2" type="HBoxContainer" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="GridContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "高亮"

[node name="IsHighlightedCheckBox" type="CheckBox" parent="GridContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
disabled = true

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(160, 240)
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TitleLabel" type="Label" parent="PanelContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Example Card"
horizontal_alignment = 1

[node name="DescriptionLabel" type="Label" parent="PanelContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "This is just an example card, 蕴含着魔法力量的卡片。我们从不轻言放弃。"
autowrap_mode = 3

[node name="SelectButton" type="Button" parent="."]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "选择"
